Still wip, just wanted to commit progress

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 ﻿**/.idea/*
 **/bin/*
 **/obj/*
-**/appsettings.Production.json/**
-**/appsettings.Development.json/**
-**/*.apk/**
-**/*.zip/**
-**/eas.json/**
-**/google-services.json/**
-appsettings.Production.json
+*appsettings.Production.json
+*appsettings.Development.json
+*.apk
+*.zip
+*eas.json
+*google-services.json
 logs/
