--- a/Kvarovi/appsettings.json
+++ b/Kvarovi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": ""
+  },
+  "expo": {
+    "accessToken": ""
+  },
   "AllowedHosts": "*"
 }
